--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.12",
     "@radix-ui/react-popover": "1.1.1",
     "@radix-ui/themes": "^3.1.1",
     "next": "14.2.5",
