--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.12",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "1.1.1",
     "@radix-ui/themes": "^3.1.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "pg": "^8.12.0",
