--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "all": "^0.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
+    "fs": "^0.0.1-security",
     "next": "14.2.5",
     "pg": "^8.12.0",
     "react": "^18",
